Added create button.

--- a/app/src/main/res/layout/fragment_demo.xml
+++ b/app/src/main/res/layout/fragment_demo.xml
@@ -21,7 +21,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:padding="@dimen/half_dynamic_spacing"
-  tools:context=".controller.MainActivity">
+  tools:context="edu.cnm.deepdive.tetris.controller.MainActivity">
 
   <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/local_display_name_layout"
@@ -130,7 +130,7 @@
     app:hintEnabled="true"
     app:hintAnimationEnabled="true"
     app:layout_constraintTop_toBottomOf="@id/bearer_token_layout"
-    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/create"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
 
@@ -146,5 +146,15 @@
       tools:ignore="Deprecated"/>
 
   </com.google.android.material.textfield.TextInputLayout>
+
+  <Button
+    android:id="@+id/create"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Create"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/permissions_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
