--- a/app/src/main/res/layout-land/fragment_demo.xml
+++ b/app/src/main/res/layout-land/fragment_demo.xml
@@ -107,7 +107,7 @@
     app:hintEnabled="true"
     app:hintAnimationEnabled="true"
     app:layout_constraintTop_toBottomOf="@id/local_display_name_layout"
-    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintBottom_toTopOf="@id/create"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toStartOf="@id/bearer_token_layout"
     app:layout_constraintWidth_percent="0.5">
@@ -149,6 +149,16 @@
       style="@style/TextAppearance.Material3.BodyLarge"
       tools:ignore="Deprecated"/>
 
+
   </com.google.android.material.textfield.TextInputLayout>
+  <Button
+    android:id="@+id/create"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Create"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/permissions_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
