Added buttons to layout, finishing repo.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,8 +29,9 @@
   <color name="l_shape">#FFA500</color>
   <color name="o_shape">#FFFF00</color>
   <color name="s_shape">#00FF00</color>
-  <color name="t-shape">#9400D3</color>
+  <color name="t_shape">#9400D3</color>
   <color name="z_shape">#FF0000</color>
+  <color name="null_shape">#00000000</color>
   <color name="brick_outline">#000000</color>
 
 </resources>
