--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
 <resources>
   <dimen name="half_dynamic_spacing">8dp</dimen>
   <dimen name="brick_corner_radius">8dp</dimen>
+  <dimen name="image_button_size">Button size</dimen>
 </resources>
