Added next queue adapter, additional Livedata updates.

--- a/app/src/main/res/drawable/null_brick.xml
+++ b/app/src/main/res/drawable/null_brick.xml
@@ -10,4 +10,8 @@
   <solid
     android:color="@color/null_shape"/>
 
+  <stroke
+    android:color="@color/null_outline"
+    android:width="@dimen/brick_outline_width"/>
+
 </shape>
