--- a/app/src/main/res/layout/item_next_queue.xml
+++ b/app/src/main/res/layout/item_next_queue.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
+  android:layout_height="wrap_content"
   android:scaleType="centerInside"
   android:adjustViewBounds="true"
-  android:src="@drawable/playing_field_brick"
+  android:src="@drawable/next_queue_block"
+  android:padding="@dimen/half_dynamic_spacing"
   tools:viewBindingIgnore="true"
   tools:ignore="ContentDescription"/>
