--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,7 +31,8 @@
   <color name="s_shape">#00FF00</color>
   <color name="t_shape">#9400D3</color>
   <color name="z_shape">#FF0000</color>
-  <color name="null_shape">#00000000</color>
   <color name="brick_outline">#000000</color>
+  <color name="null_shape">#00000000</color>
+  <color name="null_outline">#40000000</color>
 
 </resources>
