--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
   <dimen name="half_dynamic_spacing">8dp</dimen>
   <dimen name="brick_corner_radius">8dp</dimen>
   <dimen name="image_button_size">36dp</dimen>
+  <dimen name="brick_outline_width">1dp</dimen>
 </resources>
