--- a/app/src/main/res/layout/fragment_scores.xml
+++ b/app/src/main/res/layout/fragment_scores.xml
@@ -5,18 +5,25 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:padding="@dimen/half_dynamic_spacing"
   tools:context=".controller.ScoresFragment">
 
+  <include
+    layout="@layout/header_user_score"
+    android:id="@+id/header"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
 
-  <!-- TODO: Update blank fragment layout -->
-  <TextView
-    android:id="@+id/dummy_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/scores_dummy_text"
-    app:layout_constraintBottom_toBottomOf="parent"
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/scores"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:orientation="vertical"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    app:layout_constraintTop_toBottomOf="@id/header"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"/>
+    app:layout_constraintBottom_toBottomOf="parent"
+    tools:listitem="@layout/item_user_score"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
