--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -36,6 +36,7 @@
       android:inputType="none"
       android:editable="false"
       android:focusable="false"
+      android:background="@null"
       tools:text="5"/>
 
   </com.google.android.material.textfield.TextInputLayout>
@@ -60,6 +61,7 @@
       android:inputType="none"
       android:editable="false"
       android:focusable="false"
+      android:background="@null"
       tools:text="30"/>
 
   </com.google.android.material.textfield.TextInputLayout>
@@ -84,6 +86,7 @@
       android:hint="@string/score"
       android:editable="false"
       android:focusable="false"
+      android:background="@null"
       tools:text="100000"/>
 
   </com.google.android.material.textfield.TextInputLayout>
@@ -109,11 +112,12 @@
     android:gravity="center"
     android:visibility="gone"
     android:padding="@dimen/half_dynamic_spacing"
-    android:background="@drawable/null_brick"
+    android:background="@android:drawable/editbox_background_normal"
+    android:elevation="24dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
+    app:layout_constraintBottom_toTopOf="@id/drop">
 
     <TextView
       android:id="@+id/game_over"
@@ -130,14 +134,6 @@
       android:layout_margin="@dimen/half_static_spacing"
       android:text="@string/final_score_format"
       style="@style/TextAppearance.Material3.HeadlineMedium"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-      android:id="@+id/show_scores"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/half_static_spacing"
-      android:src="@drawable/high_scores"
-      android:tooltipText="@string/high_scores"/>
 
   </LinearLayout>
 
@@ -214,29 +210,21 @@
     android:layout_height="0dp"
     android:layout_margin="@dimen/half_dynamic_spacing"
     app:layout_constraintTop_toTopOf="@id/playing_field"
-    app:layout_constraintBottom_toTopOf="@id/run"
+    app:layout_constraintBottom_toBottomOf="@id/playing_field"
     app:layout_constraintLeft_toRightOf="@id/playing_field"
     app:layout_constraintRight_toRightOf="parent"
     tools:listitem="@layout/item_next_queue"/>
 
-  <Button
-    android:id="@+id/run"
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/show_scores"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/half_dynamic_spacing"
-    android:text="Run"
-    app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintBottom_toTopOf="@id/stop"/>
-
-  <Button
-    android:id="@+id/stop"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/half_dynamic_spacing"
-    android:text="Stop"
-    app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"/>
+    android:layout_margin="@dimen/half_static_spacing"
+    android:src="@drawable/high_scores"
+    android:tooltipText="@string/high_scores"
+    app:useCompatPadding="true"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    tools:ignore="ContentDescription"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
