--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,7 @@
   <color name="null_shape">#00000000</color>
   <color name="null_outline">#40000000</color>
 
+  <color name="odd_row_background">#20000000</color>
+  <color name="even_row_background">@android:color/transparent</color>
+
 </resources>
