--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,5 @@
   <color name="odd_row_background">#20000000</color>
   <color name="even_row_background">@android:color/transparent</color>
 
+  <color name="ic_tetris_launcher_background">#262F2F</color>
 </resources>
